crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@fun__apply_body.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/fun/apply_body.panda
---
Ok(
    Fun {
        fun: Fun {
            arg: "f",
            body: Fun(
                Fun {
                    arg: "x",
                    body: App(
                        App {
                            fun: Var(
                                Var {
                                    name: "f",
                                },
                            ),
                            arg: Var(
                                Var {
                                    name: "x",
                                },
                            ),
                        },
                    ),
                },
            ),
        },
        env: "<opaque>",
    },
)
