crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@fun__id.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/fun/id.panda
---
Ok(
    Fun {
        fun: Fun {
            arg: "x",
            body: Var(
                Var {
                    name: "x",
                },
            ),
        },
        env: "<opaque>",
    },
)
