crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@fun__nested.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/fun/nested.panda
---
Ok(
    Fun {
        fun: Fun {
            arg: "x",
            body: Fun(
                Fun {
                    arg: "y",
                    body: BinOp(
                        BinOp {
                            left: Var(
                                Var {
                                    name: "x",
                                },
                            ),
                            right: Var(
                                Var {
                                    name: "y",
                                },
                            ),
                            kind: Add,
                        },
                    ),
                },
            ),
        },
        env: "<opaque>",
    },
)
